--- a/static/main.css
+++ b/static/main.css
@@ -2,17 +2,18 @@
   padding: 25px;
 }
 .title{
-  padding: 1.5em;
+
 }
-.title h1{
+.title h3{
   font-family: 'Rowdies', cursive;
-  font-size: 3.5em;
+  font-size: 3em;
   color: #3b7076;
 }
 .intro .main-paragraph{
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 1em;
 }
 .intro img{
     width: 300px;
@@ -22,8 +23,8 @@
   font-size: 1.8em;
   color: #3b7076;
 }
-.ok:hover,
-.ok:active{
+.movies-main:hover,
+.movies-main:active{
   text-decoration: none;
   color: #4b8d94;
 }
