--- a/templates/home.html
+++ b/templates/home.html
@@ -39,11 +39,11 @@
     <div class="row">
       {% for row in data %}
         <div class="card col-sm-3" style="width: 18rem;">
-          <a href="#"><img src="{{ row[1] }}" class="card-img-top" alt="..."></a>
+          <a href="#"><img src="{{ row[1] }}" class="card-img-top" alt="row[0]"></a>
           <div class="card-body">
             <h5 class="card-title">{{ row[0] }}</h5>
             <p class="card-text">year: {{ row[2] }}  - Rate: {{ row[4] }}/10</p>
-            <a href="#" class="btn stretched-link">See more</a>
+            <a href="{{ url_for('movie', name=row[0]) }}" class="btn stretched-link">See more</a>
           </div>
         </div>
       {% endfor %}
